--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
             <h3 class="text-2xl font-bold text-pink-900 mb-4">Instruções do Curso Livre</h3>
             <div class="text-slate-700">
                 <ol class="list-decimal list-inside space-y-3 text-base">
-                    <li>Este Curso Livre é voltado para médicos e será certificado com a carga horária de 2 horas/aula.</li>
+                    <li>Este Curso Livre é voltado para enfermeiros e será certificado com a carga horária de 2 horas/aula.</li>
                     <li>Você deve clicar no botão disponível ao lado (ou <a href="https://espfloripa.github.io/cursoslivres/" target="_blank" rel="noopener noreferrer" class="text-pink-600 hover:underline font-semibold">aqui</a>) e preencher todos os campos para se inscrever no curso no mês corrente.</li>
                     <li>Após a inscrição realizada, você tem até o último dia do mês para responder o teste de aproveitamento disponibilizado no botão no fim da página.</li>
                     <li>Ao responder o teste de aproveitamento coloque o nome completo e CPF conforme você colocou no link de inscrição.</li>
