--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                             <!-- Vídeo -->
                             <p class="font-semibold text-lg text-gray-800">Vídeo de Inserção:</p>
                             <div class="aspect-video w-full max-w-3xl mx-auto mb-6 rounded-lg overflow-hidden shadow">
-                                <iframe class="w-full h-full" src="https://www.youtube.com/embed/183VNyi8QWd0I0XhdERvpqRIxFhrxPtBq" title="Procedimento de Inserção Implanon" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <iframe class="w-full h-full" src="https://drive.google.com/file/d/183VNyi8QWd0I0XhdERvpqRIxFhrxPtBq/preview" title="Procedimento de Inserção Implanon" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
 
                             <p>Antes de iniciar, leia em conjunto e solicite a assinatura do Termo de Consentimento Livre e Esclarecido (para todas as faixas etárias) disponível no link abaixo:</p>
@@ -542,7 +542,7 @@
                             <!-- Vídeo -->
                             <p class="font-semibold text-lg text-gray-800">Vídeo de Retirada:</p>
                             <div class="aspect-video w-full max-w-3xl mx-auto mb-6 rounded-lg overflow-hidden shadow">
-                                 <iframe class="w-full h-full" src="https://www.youtube.com/embed/1zVSQsjDt0QGaCwRSu5yUt1GVWXJAmpJe" title="Procedimento de Retirada Implanon" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                 <iframe class="w-full h-full" src="https://drive.google.com/file/d/1zVSQsjDt0QGaCwRSu5yUt1GVWXJAmpJe/preview" title="Procedimento de Retirada Implanon" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
 
                             <p>O implante deve ser retirado após três anos de uso do método ou a qualquer momento em que a usuária apresente esse desejo, ainda que anterior ao limite da duração.</p>
